# evomics-faculty

./: CLAUDE.md  README.md  addHarvardWorkshopsFaculty.js  addMolecularEvolutionFaculty2015.js  analyzeAffiliations.js  analyzeData.cjs  analyzeUppsala.js  auditFacultyEnrichment.js  checkMigrationStatus.cjs  checkMissingInstitutions.js  cleanFacultyDuplicates.js  debugDataMismatch.js  debugGeocoding.js  enrichRecentFaculty.js  extract2023Workshop.js  extract2024Workshop.js  extractWPSG2020.js  extractWPSG2022.js  extractWPSG2025.js  extractWPhylo2017.js  extractWPhylo2019.js  extractWPhylo2024.js  extractWoG2019.js  extractWoG2020.js  extractWoG2022.js  generateEnrichmentReport.js  package-lock.json  package.json  process2023Workshop.js  process2024Workshop.js  processCompleteMultiWorkshopHistory.js  processCompleteWoGHistory.js  processExtendedHistoricalData.js  processHistoricalIntegration.js  processRecentHistoricalData.js  processWPSG2025.js  processWPhylo2024.js  tailwind.config.js  testGeocoding.js  validateAndFixSessionCounts.js  (+1 more)
IBC-AI/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
IBC-AI/docker/: Dockerfile.dev  Dockerfile.jupyter
IBC-AI/frontend/src/pages/protocols/: ProtocolsPage.tsx
IBC-AI/ibc_ai/: __init__.py  main.py  version.py
IBC-AI/ibc_ai/api/: __init__.py
IBC-AI/ibc_ai/api/routes/: __init__.py  health.py
IBC-AI/ibc_ai/config/: settings.py
IBC-AI/ibc_ai/core/: logging.py
IBC-AI/notebooks/: 00_project_overview.ipynb
IBC-AI/scripts/: create_database.py
IBC-AI/tests/: __init__.py  conftest.py
IBC-AI/tests/api/: __init__.py  test_health.py
docs/: ACCENT_HANDLING_STRATEGY.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  FACULTY_UPDATE_QUICK_GUIDE.md  FACULTY_UPDATE_WORKFLOW.md  PHASE_1_RESULTS_SUMMARY.md  PRESENTER_MATCHING_ANALYSIS.md  TWO_WEEK_INTEGRATION_SUMMARY.md  WORKSHOP_INTEGRATION_PLAN.md
evomics-faculty/: CLAUDE.md  EVOMICS_INTEGRATION_PLAN.md  INTEGRATION_SUMMARY.md  README.md
reports/: data-quality-report.json
scripts/: addMissingFaculty.js  analyzeEnrichmentCoverage.js  analyzeNameEncodingIssues.js  (+15 more)
(+80 files in other folders)
