[tool.poetry]
name = "ibc-ai"
version = "0.1.0"
description = "IBC Protocol Review Software: AI-powered system for biosafety committee protocol review"
authors = ["Scott Handley"]
readme = "README.md"
license = "MIT"
packages = [{include = "ibc_ai"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.105.0"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
gunicorn = "^21.2.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
neo4j = "^5.15.0"
langchain = "^0.0.350"
langchain-openai = "^0.0.2"
langchain-anthropic = "^0.1.1"
sentence-transformers = "^2.2.2"
transformers = "^4.35.2"
torch = "^2.1.1"
spacy = "^3.7.2"
pypdf = "^3.17.1"
pdf2image = "^1.16.3"
unstructured = "^0.10.30"
pillow = "^10.1.0"
pytesseract = "^0.3.10"
weaviate-client = "^3.25.3"
pgvector = "^0.2.4"
python-dotenv = "^0.21.0"
httpx = "^0.25.2"
loguru = "^0.7.2"
rich = "^13.7.0"
python-jose = "^3.3.0"
pyjwt = "^2.8.0"
redis = "^5.0.1"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
jupyter = "^1.0.0"
ipykernel = "^6.27.1"
faker = "^20.1.0"
factory-boy = "^3.3.0"
reportlab = "^4.0.8"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"